[gd_scene load_steps=48 format=3 uid="uid://bqmb3nobvl54s"]

[ext_resource type="Texture2D" uid="uid://cbxucojq32865" path="res://sprites/FREE_Samurai 2D Pixel Art v1.2/Sprites/ATTACK 1.png" id="1_fcev1"]
[ext_resource type="Script" uid="uid://bkrg232q23ens" path="res://scripts/bedran.gd" id="1_wyqxk"]
[ext_resource type="Texture2D" uid="uid://dwby2votvvtol" path="res://sprites/FREE_Samurai 2D Pixel Art v1.2/Sprites/IDLE.png" id="2_wyqxk"]
[ext_resource type="Texture2D" uid="uid://c61ac2ogm7wyi" path="res://sprites/FREE_Samurai 2D Pixel Art v1.2/Sprites/RUN.png" id="3_vp8wm"]
[ext_resource type="AudioStream" uid="uid://be4ae47u0qk7c" path="res://musics/chiptune-boss-fight-music.mp3" id="5_vp8wm"]
[ext_resource type="AudioStream" uid="uid://ojv46vaoca08" path="res://musics/sfx/Bedran_Special_Attack.ogg" id="6_5yqq6"]
[ext_resource type="AudioStream" uid="uid://djpicoieeim5m" path="res://musics/sfx/Bedran_Lightning.ogg" id="7_2spuv"]
[ext_resource type="AudioStream" uid="uid://t4ac35sgvo3t" path="res://musics/sfx/Sword whoosh 1.wav" id="8_qirow"]
[ext_resource type="AudioStream" uid="uid://yfk8y0lmabx" path="res://musics/sfx/Stab_Punch_Hit_136.wav" id="9_m6t2h"]
[ext_resource type="AudioStream" uid="uid://dtv1b0moxld0b" path="res://musics/sfx/death.ogg" id="10_m6t2h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qirow"]
atlas = ExtResource("1_fcev1")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6t2h"]
atlas = ExtResource("1_fcev1")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb6ja"]
atlas = ExtResource("1_fcev1")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3v1m"]
atlas = ExtResource("1_fcev1")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3a3r"]
atlas = ExtResource("2_wyqxk")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5idkr"]
atlas = ExtResource("2_wyqxk")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lmne"]
atlas = ExtResource("2_wyqxk")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykg1u"]
atlas = ExtResource("2_wyqxk")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_asdae"]
atlas = ExtResource("2_wyqxk")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i48cb"]
atlas = ExtResource("2_wyqxk")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_eni7d"]
atlas = ExtResource("2_wyqxk")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti5r3"]
atlas = ExtResource("2_wyqxk")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahps"]
atlas = ExtResource("2_wyqxk")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_06prr"]
atlas = ExtResource("2_wyqxk")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1e4y"]
atlas = ExtResource("1_fcev1")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl24v"]
atlas = ExtResource("1_fcev1")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdhr"]
atlas = ExtResource("1_fcev1")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3vdv"]
atlas = ExtResource("1_fcev1")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkqqx"]
atlas = ExtResource("3_vp8wm")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qasjb"]
atlas = ExtResource("3_vp8wm")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqc4d"]
atlas = ExtResource("3_vp8wm")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xn78"]
atlas = ExtResource("3_vp8wm")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfiph"]
atlas = ExtResource("3_vp8wm")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqqqw"]
atlas = ExtResource("3_vp8wm")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvxrx"]
atlas = ExtResource("3_vp8wm")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6has"]
atlas = ExtResource("3_vp8wm")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_feqdl"]
atlas = ExtResource("3_vp8wm")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0p0w"]
atlas = ExtResource("3_vp8wm")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_12l6q"]
atlas = ExtResource("3_vp8wm")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlagg"]
atlas = ExtResource("3_vp8wm")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7qmc"]
atlas = ExtResource("3_vp8wm")
region = Rect2(1152, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_66xie"]
atlas = ExtResource("3_vp8wm")
region = Rect2(1248, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7huy"]
atlas = ExtResource("3_vp8wm")
region = Rect2(1344, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k806n"]
atlas = ExtResource("3_vp8wm")
region = Rect2(1440, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_tlg5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qirow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6t2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb6ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3v1m")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3a3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5idkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lmne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykg1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asdae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i48cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eni7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti5r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06prr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1e4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl24v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3vdv")
}],
"loop": false,
"name": &"hold",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkqqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qasjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqc4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xn78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfiph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqqqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvxrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6has")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feqdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0p0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12l6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlagg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7qmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66xie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7huy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k806n")
}],
"loop": true,
"name": &"run",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swhdn"]
size = Vector2(15, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wyqxk"]
size = Vector2(33, 20)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemies"]]
process_mode = 1
collision_layer = 4
collision_mask = 132
script = ExtResource("1_wyqxk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemies"]]
process_mode = 1
sprite_frames = SubResource("SpriteFrames_tlg5m")
animation = &"attack"
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(197, 0)
collision_mask = 4
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-148, -1)
collision_mask = 4
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 16.5)
shape = SubResource("RectangleShape2D_swhdn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
custom_minimum_size = Vector2(200, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
value = 100.0

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 0
offset_left = -1.0
offset_top = -19.0
offset_right = 83.0
offset_bottom = 4.0
theme_override_font_sizes/font_size = 8
text = "BEDRAN"
vertical_alignment = 1

[node name="Label" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -11.5
offset_right = 56.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "BOSS SLAINED"

[node name="AttackTimer" type="Timer" parent="."]

[node name="RunTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="swordCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="swordCollision"]
position = Vector2(23.5, 16)
shape = SubResource("RectangleShape2D_wyqxk")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vp8wm")
volume_db = -15.0
bus = &"Music"

[node name="SFX_SPECIAL" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5yqq6")
volume_db = 6.0
bus = &"SFX"

[node name="SFX_LIGHTNING" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2spuv")
bus = &"SFX"

[node name="SFX_ATTACK" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qirow")
bus = &"SFX"

[node name="SFX_HIT" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_m6t2h")
bus = &"SFX"

[node name="SFX_DEATH" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_m6t2h")
bus = &"SFX"

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="swordCollision" to="." method="_on_sword_collision_body_entered"]
